clusters/cl01tl/manifests/traefik/Gateway-traefik-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik
    helm.sh/chart: traefik-41.6.1
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      port: 8000
      protocol: HTTP
      hostname: '*.alexlebens.dev'
      allowedRoutes:
        namespaces:
          from: All
    - name: web-s3
      port: 8000
      protocol: HTTP
      hostname: '*.s3.alexlebens.dev'
      allowedRoutes:
        namespaces:
          from: All
    - name: web-s3-a
      port: 8000
      protocol: HTTP
      hostname: '*.a.s3.alexlebens.dev'
      allowedRoutes:
        namespaces:
          from: All
    - name: websecure
      port: 8443
      protocol: HTTPS
      hostname: '*.alexlebens.dev'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: websecure-dev-gateway-cert
            namespace: traefik
    - name: websecure-s3
      port: 8443
      protocol: HTTPS
      hostname: '*.s3.alexlebens.dev'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: websecure-dev-s3-gateway-cert
            namespace: traefik
    - name: websecure-s3-a
      port: 8443
      protocol: HTTPS
      hostname: '*.a.s3.alexlebens.dev'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: websecure-dev-s3-a-gateway-cert
            namespace: traefik
